Jakarta annotations replaced with Jspecify